Fixed some alignment issues and made videos more responsive for mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -44,3 +44,18 @@
     color: #f2d835;
     font-size: 35px;
 }
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
